--- a/Example/XCoordinator-macOS/Scenes/Home/HomeViewController.xib
+++ b/Example/XCoordinator-macOS/Scenes/Home/HomeViewController.xib
@@ -17,11 +17,11 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="CZf-iR-ame">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="272"/>
+            <rect key="frame" x="0.0" y="0.0" width="480" height="119"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <stackView distribution="fill" orientation="vertical" alignment="centerX" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ak3-gd-lKQ">
-                    <rect key="frame" x="205" y="97" width="71" height="79"/>
+                    <rect key="frame" x="205" y="20" width="71" height="79"/>
                     <subviews>
                         <button autoresizesSubviews="NO" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="TzC-3q-aCT">
                             <rect key="frame" x="-6" y="51" width="83" height="32"/>
@@ -58,8 +58,12 @@
                 </stackView>
             </subviews>
             <constraints>
+                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ak3-gd-lKQ" secondAttribute="trailing" constant="20" id="0N2-Bu-Loa"/>
                 <constraint firstItem="ak3-gd-lKQ" firstAttribute="centerY" secondItem="CZf-iR-ame" secondAttribute="centerY" id="B1Z-2R-gTr"/>
                 <constraint firstItem="ak3-gd-lKQ" firstAttribute="centerX" secondItem="CZf-iR-ame" secondAttribute="centerX" id="TFq-Jf-4KH"/>
+                <constraint firstItem="ak3-gd-lKQ" firstAttribute="top" relation="greaterThanOrEqual" secondItem="CZf-iR-ame" secondAttribute="top" constant="20" id="ehE-hJ-I9y"/>
+                <constraint firstItem="ak3-gd-lKQ" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="CZf-iR-ame" secondAttribute="leading" constant="20" id="grI-xI-olh"/>
+                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="ak3-gd-lKQ" secondAttribute="bottom" constant="20" id="rwl-Eg-Mk9"/>
             </constraints>
         </customView>
     </objects>
